--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,14 @@
+body {
+    user-select: none !important;
+}
+footer {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
 .title-center {
     text-align: center;
     font-weight: 400;
@@ -8,10 +19,6 @@
     min-height: 200px;
     background-size: cover;
     background-repeat: no-repeat;
-}
-
-body {
-    user-select: none !important;
 }
 
 .card-fade {
@@ -31,7 +38,7 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    
+
     height: 200px;
     margin-bottom: 50px;
 }
@@ -46,6 +53,6 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    
+
     position: absolute;
 }
